# matrix-muncher

./: CHANGELOG.md  README.md  enc-clone.typ  example.typ  matrix-muncher.cabal  package.yaml  test.typ
app/: Main.hs
src/: Algebra.hs  Lib.hs  Matrix.hs  MatrixAlgebra.hs  Permutation.hs  Quantum.hs  Typst.hs
