cabal-version: 2.2

name:           matrix-muncher
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/matrix-muncher#readme>
homepage:       https://github.com/githubuser/matrix-muncher#readme
bug-reports:    https://github.com/githubuser/matrix-muncher/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2026 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/matrix-muncher

library
  exposed-modules:
      Algebra
      Matrix
  other-modules:
      Paths_matrix_muncher
  autogen-modules:
      Paths_matrix_muncher
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable matrix-muncher-exe
  main-is: Main.hs
  other-modules:
      Paths_matrix_muncher
  autogen-modules:
      Paths_matrix_muncher
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , matrix-muncher
  default-language: Haskell2010

test-suite matrix-muncher-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_matrix_muncher
  autogen-modules:
      Paths_matrix_muncher
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , matrix-muncher
  default-language: Haskell2010
